<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:scaleType="fitXY"
            android:src="@drawable/hatly_user_splash_bg" />


        <ImageView
            android:id="@+id/hatlyIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/hatly_logo_svg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_radius_green"
            android:fontFamily="@font/open_sans_regular"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hatlyIcon"
            app:layout_constraintVertical_bias="0.1" />


        <TextView
            android:id="@+id/textView43"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_radius_corner_gray"
            android:fontFamily="@font/open_sans_regular"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/guest_user"
            android:textAlignment="center"
            android:textColor="@color/colorGreen"
            android:textColorHint="#787878"
            android:textCursorDrawable="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtLogin"
            app:layout_constraintStart_toStartOf="@+id/txtLogin"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

        <TextView
            android:id="@+id/textView554"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/_10ssp"
            style="@style/txtGrayColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/textView43"
            app:layout_constraintTop_toBottomOf="@+id/textView43" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login"
            android:textSize="@dimen/_10ssp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="@+id/textView554"
            app:layout_constraintEnd_toEndOf="@+id/textView43"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView554"
            app:layout_constraintTop_toTopOf="@+id/textView554" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>