<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_auth_field"
            android:backgroundTint="@color/white"
            android:elevation="1dp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/round_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:tint="#363636" />

        <ImageView
            android:id="@+id/hatlyIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/find_restaurants_and_nshops_near_by_you"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/_15ssp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toTopOf="@+id/txtLogin"
            app:layout_constraintEnd_toEndOf="@+id/hatlyIcon"
            app:layout_constraintStart_toStartOf="@+id/hatlyIcon"
            app:layout_constraintTop_toBottomOf="@+id/hatlyIcon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/share_your_location_to_navigate_your_nearest_nstores_and_restaurants"
            android:textColor="#909090"
            android:textAlignment="center"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toTopOf="@+id/txtLogin"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius_green"
            android:fontFamily="@font/open_sans_regular"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/allow_location"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintVertical_bias="0.9"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


<!--        <TextView-->
<!--            android:id="@+id/txtEnterLocaion"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/montserrat_regular"-->
<!--            android:text="Enter my location"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/colorRed"-->
<!--            android:textSize="@dimen/_12ssp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/txtLogin"-->
<!--            app:layout_constraintStart_toStartOf="@+id/txtLogin"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />-->



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>